# Game-Engine

./: CMakeLists.txt  README.md  gui.h  main.cpp
Engine/Core/: Application.h  Application.inl  Camera.cpp  Camera.h  Context.cpp  Context.h  Core.h  Engine.h  Engine.inl  Image.h  Log.h  Material.h  Mesh.h  Model.h  Node.cpp  Node.h  Resource.cpp  Resource.h  Scene.h
Engine/Core/Components/: Drawable.h  Material.h
Engine/Core/ECS/: ECS.h  Entity.h  EntityManager.h  EntityManager.inl  SystemManager.h
Engine/Core/Lighting/: Lighting.h
Engine/Core/Systems/: RenderSystem.h
Engine/Editor/: AddComponent.h  ContentBrowser.cpp  Editor.cpp  Editor.h  Imgui.cpp  Imgui.h
Engine/Editor/Components/: CameraProperty.h  DirLightProperty.h  MaterialProperty.h  MeshProperty.h  PointLightProperty.h  SpotLightProperty.h  TransformProperty.h
Engine/GPU/: Enums.h  GLenums.cpp  GLenums.h  GPU.cpp  GPU.h
Engine/GPU/Buffers/: Attrib.h  IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexLayout.cpp  VertexLayout.h
Engine/GPU/Framebuffers/: Framebuffer.cpp  Framebuffer.h
Engine/GPU/Shaders/: Program.cpp  Program.h  Shader.cpp  Shader.h
Engine/GPU/Shaders/Shaders/: basic.frag  basic.vert  pproc.frag  pproc.vert
Engine/GPU/Textures/: Texture.cpp  Texture.h
Engine/Math/: Basis.cpp  Basis.h  Transform.cpp  Transform.h
Engine/Platform/: Input.cpp  Input.h  Window.cpp  Window.h
Engine/Renderer/: Renderer.cpp  Renderer.h
